2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Corrected the title of the relationships overview 
	window.

2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	More cleanup.

2007-02-17  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	More syntax corrections.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h: 
	Remember the windows size between instantiations, temporarily for the lifetime of the 
	application.

2007-02-16  Rasmus Toftdahl Olesen  <halfdan@halfdans.net>

	* glom/relationships_overview/dialog_relationships_overview.cc:
	* glom/relationships_overview/dialog_relationships_overview.h:
	Patch in Bug #408408 to correct the source code formatting.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_find/box_data_details_find.cc:
	* glom/mode_find/box_data_list_find.cc: fill_from_database() methods: 
	Do not try to open a connection if the document is NULL, to stop a connection error dialog 
	while closing, after we have stopped self-hosting.

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* glom/application.cc:
	* glom/frame_glom.cc:
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h: When starting self-hosting, double-check that the directory 
	is there so we can fail more pleasantly, in this rare case. 

2007-02-16  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_music_collection.glom: Publishers table: Correct the Albums relationship, 
	and add a list of related albums to the details view.
